--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@arcjet/inspect": "^1.0.0-beta.15",
     "@arcjet/next": "^1.0.0-beta.15",
     "@clerk/nextjs": "^6.35.5",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-slot": "^1.2.4",
     "@tabler/icons-react": "^3.35.0",
     "axios": "^1.13.2",
@@ -19,12 +20,13 @@
     "clsx": "^2.1.1",
     "convex": "^1.29.3",
     "lucide-react": "^0.555.0",
-    "motion": "^12.23.24",
+    "motion": "^12.23.25",
     "next": "^15.5.6",
     "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
